[gd_scene load_steps=9 format=2]

[ext_resource path="res://TargetText/TargetText.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bonus/BonusSceneOne.gd" type="Script" id=2]
[ext_resource path="res://Axis/Axis.tscn" type="PackedScene" id=3]
[ext_resource path="res://ProgressBar/ProgressBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Framework/Cameras/ShakeCamera.tscn" type="PackedScene" id=5]
[ext_resource path="res://Bonus/BonusScoreDisplay.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Images/bg_focus_edge_bonus.png" type="Texture" id=7]
[ext_resource path="res://Framework/Effects/TiledBackground/TiledBackground.tscn" type="PackedScene" id=8]

[node name="BonusSceneOne" type="Node2D"]
script = ExtResource( 2 )

[node name="TiledBackground" parent="." instance=ExtResource( 8 )]
self_modulate = Color( 0.0392157, 0.054902, 0.321569, 1 )
texture = ExtResource( 7 )

[node name="Text" parent="." instance=ExtResource( 1 )]

[node name="Axis" parent="." instance=ExtResource( 3 )]
position = Vector2( 480, 360 )
bonus_mode = true

[node name="ProgressBar" parent="." instance=ExtResource( 4 )]
bar_height = 5

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" parent="." instance=ExtResource( 5 )]

[node name="BonusScoreDisplay" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
